--- a/Shiva Password Cracker and Hashing Tool/Shiva Password Cracker and Hashing Tool.csproj
+++ b/Shiva Password Cracker and Hashing Tool/Shiva Password Cracker and Hashing Tool.csproj
@@ -46,16 +46,31 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Form1.cs">
+    <Compile Include="Hashing-Tool.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="Hashing-Tool.Designer.cs">
+      <DependentUpon>Hashing-Tool.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Password-Cracker.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Password-Cracker.Designer.cs">
+      <DependentUpon>Password-Cracker.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="Shiva-Menu.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Shiva-Menu.Designer.cs">
+      <DependentUpon>Shiva-Menu.cs</DependentUpon>
+    </Compile>
+    <EmbeddedResource Include="Hashing-Tool.resx">
+      <DependentUpon>Hashing-Tool.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Password-Cracker.resx">
+      <DependentUpon>Password-Cracker.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -66,6 +81,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Shiva-Menu.resx">
+      <DependentUpon>Shiva-Menu.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
