Menu selection and exit setup

--- a/Shiva Password Cracker and Hashing Tool/Shiva Password Cracker and Hashing Tool.csproj
+++ b/Shiva Password Cracker and Hashing Tool/Shiva Password Cracker and Hashing Tool.csproj
@@ -46,31 +46,31 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Hashing-Tool.cs">
+    <Compile Include="HashingTool.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Hashing-Tool.Designer.cs">
-      <DependentUpon>Hashing-Tool.cs</DependentUpon>
+    <Compile Include="HashingTool.Designer.cs">
+      <DependentUpon>HashingTool.cs</DependentUpon>
     </Compile>
-    <Compile Include="Password-Cracker.cs">
+    <Compile Include="PasswordCracker.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Password-Cracker.Designer.cs">
-      <DependentUpon>Password-Cracker.cs</DependentUpon>
+    <Compile Include="PasswordCracker.Designer.cs">
+      <DependentUpon>PasswordCracker.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Shiva-Menu.cs">
+    <Compile Include="ShivaMenu.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Shiva-Menu.Designer.cs">
-      <DependentUpon>Shiva-Menu.cs</DependentUpon>
+    <Compile Include="ShivaMenu.Designer.cs">
+      <DependentUpon>ShivaMenu.cs</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="Hashing-Tool.resx">
-      <DependentUpon>Hashing-Tool.cs</DependentUpon>
+    <EmbeddedResource Include="HashingTool.resx">
+      <DependentUpon>HashingTool.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Password-Cracker.resx">
-      <DependentUpon>Password-Cracker.cs</DependentUpon>
+    <EmbeddedResource Include="PasswordCracker.resx">
+      <DependentUpon>PasswordCracker.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -81,8 +81,8 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="Shiva-Menu.resx">
-      <DependentUpon>Shiva-Menu.cs</DependentUpon>
+    <EmbeddedResource Include="ShivaMenu.resx">
+      <DependentUpon>ShivaMenu.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
