Working on basic classes

--- a/Shiva Password Cracker and Hashing Tool/Shiva Password Cracker and Hashing Tool.csproj
+++ b/Shiva Password Cracker and Hashing Tool/Shiva Password Cracker and Hashing Tool.csproj
@@ -46,12 +46,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MD5.cs" />
+    <Compile Include="Hash.cs" />
     <Compile Include="HashingTool.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="HashingTool.Designer.cs">
       <DependentUpon>HashingTool.cs</DependentUpon>
     </Compile>
+    <Compile Include="IHash.cs" />
     <Compile Include="PasswordCracker.cs">
       <SubType>Form</SubType>
     </Compile>
