MD5 hashing done

--- a/Shiva Password Cracker and Hashing Tool/Shiva Password Cracker and Hashing Tool.csproj
+++ b/Shiva Password Cracker and Hashing Tool/Shiva Password Cracker and Hashing Tool.csproj
@@ -46,7 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="MD5.cs" />
+    <Compile Include="MD5Hash.cs" />
     <Compile Include="Hash.cs" />
     <Compile Include="HashingTool.cs">
       <SubType>Form</SubType>
