Hashing tool basics complete

--- a/Shiva Password Cracker and Hashing Tool/Shiva Password Cracker and Hashing Tool.csproj
+++ b/Shiva Password Cracker and Hashing Tool/Shiva Password Cracker and Hashing Tool.csproj
@@ -46,6 +46,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="SHA256Hash.cs" />
+    <Compile Include="SHA512Hash.cs" />
+    <Compile Include="SHA128Hash.cs" />
     <Compile Include="MD5Hash.cs" />
     <Compile Include="Hash.cs" />
     <Compile Include="HashingTool.cs">
