Working on metadata extractor

--- a/Shiva Password Cracker and Hashing Tool/Shiva Password Cracker and Hashing Tool.csproj
+++ b/Shiva Password Cracker and Hashing Tool/Shiva Password Cracker and Hashing Tool.csproj
@@ -46,6 +46,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ImageFile.cs" />
+    <Compile Include="MetadataExtractor.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MetadataExtractor.Designer.cs">
+      <DependentUpon>MetadataExtractor.cs</DependentUpon>
+    </Compile>
     <Compile Include="WordLists.cs" />
     <Compile Include="SHA256Hash.cs" />
     <Compile Include="SHA512Hash.cs" />
@@ -73,6 +80,9 @@
     <Compile Include="ShivaMenu.Designer.cs">
       <DependentUpon>ShivaMenu.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="MetadataExtractor.resx">
+      <DependentUpon>MetadataExtractor.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="HashingTool.resx">
       <DependentUpon>HashingTool.cs</DependentUpon>
     </EmbeddedResource>
