Finished salt generation

--- a/Shiva Password Cracker and Hashing Tool/Shiva Password Cracker and Hashing Tool.csproj
+++ b/Shiva Password Cracker and Hashing Tool/Shiva Password Cracker and Hashing Tool.csproj
@@ -46,37 +46,38 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="WordLists.cs" />
-    <Compile Include="SHA256Hash.cs" />
-    <Compile Include="SHA512Hash.cs" />
-    <Compile Include="SHA128Hash.cs" />
-    <Compile Include="MD5Hash.cs" />
-    <Compile Include="Hash.cs" />
-    <Compile Include="HashingTool.cs">
+    <Compile Include="HashClasses\Salt.cs" />
+    <Compile Include="WordLists\WordLists.cs" />
+    <Compile Include="HashClasses\SHA256Hash.cs" />
+    <Compile Include="HashClasses\SHA512Hash.cs" />
+    <Compile Include="HashClasses\SHA128Hash.cs" />
+    <Compile Include="HashClasses\MD5Hash.cs" />
+    <Compile Include="HashClasses\Hash.cs" />
+    <Compile Include="UserInterfaces\HashingTool\HashingTool.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="HashingTool.Designer.cs">
+    <Compile Include="UserInterfaces\HashingTool\HashingTool.Designer.cs">
       <DependentUpon>HashingTool.cs</DependentUpon>
     </Compile>
-    <Compile Include="IHash.cs" />
-    <Compile Include="PasswordCracker.cs">
+    <Compile Include="HashClasses\IHash.cs" />
+    <Compile Include="UserInterfaces\PasswordCracker\PasswordCracker.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="PasswordCracker.Designer.cs">
+    <Compile Include="UserInterfaces\PasswordCracker\PasswordCracker.Designer.cs">
       <DependentUpon>PasswordCracker.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ShivaMenu.cs">
+    <Compile Include="UserInterfaces\ShivaMenu\ShivaMenu.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="ShivaMenu.Designer.cs">
+    <Compile Include="UserInterfaces\ShivaMenu\ShivaMenu.Designer.cs">
       <DependentUpon>ShivaMenu.cs</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="HashingTool.resx">
+    <EmbeddedResource Include="UserInterfaces\HashingTool\HashingTool.resx">
       <DependentUpon>HashingTool.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="PasswordCracker.resx">
+    <EmbeddedResource Include="UserInterfaces\PasswordCracker\PasswordCracker.resx">
       <DependentUpon>PasswordCracker.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
@@ -88,7 +89,7 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="ShivaMenu.resx">
+    <EmbeddedResource Include="UserInterfaces\ShivaMenu\ShivaMenu.resx">
       <DependentUpon>ShivaMenu.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
@@ -105,7 +106,7 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="TextFile1.txt" />
+    <Content Include="WordLists\SmallWordList.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
