--- a/Shiva Password Cracker and Hashing Tool/Shiva Password Cracker and Hashing Tool.csproj
+++ b/Shiva Password Cracker and Hashing Tool/Shiva Password Cracker and Hashing Tool.csproj
@@ -46,20 +46,20 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="HashClasses\Salt.cs" />
-    <Compile Include="WordLists\WordLists.cs" />
-    <Compile Include="HashClasses\SHA256Hash.cs" />
-    <Compile Include="HashClasses\SHA512Hash.cs" />
-    <Compile Include="HashClasses\SHA128Hash.cs" />
-    <Compile Include="HashClasses\MD5Hash.cs" />
-    <Compile Include="HashClasses\Hash.cs" />
+    <Compile Include="Hashing\Salt.cs" />
+    <Compile Include="WordList\WordLists.cs" />
+    <Compile Include="Hashing\SHA256Hash.cs" />
+    <Compile Include="Hashing\SHA512Hash.cs" />
+    <Compile Include="Hashing\SHA128Hash.cs" />
+    <Compile Include="Hashing\MD5Hash.cs" />
+    <Compile Include="Hashing\Hash.cs" />
     <Compile Include="UserInterfaces\HashingTool\HashingTool.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="UserInterfaces\HashingTool\HashingTool.Designer.cs">
       <DependentUpon>HashingTool.cs</DependentUpon>
     </Compile>
-    <Compile Include="HashClasses\IHash.cs" />
+    <Compile Include="Hashing\IHash.cs" />
     <Compile Include="UserInterfaces\PasswordCracker\PasswordCracker.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -106,7 +106,7 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="WordLists\SmallWordList.txt" />
+    <Content Include="WordList\SmallWordList.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
